--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
             android:drawablePadding="16dp"
             android:hint="@string/email_intro_value"
             android:inputType="textWebEmailAddress"
+            android:importantForAutofill="no"
             android:padding="16dp" />
 
         <EditText
@@ -50,6 +51,7 @@
             android:drawablePadding="16dp"
             android:hint="@string/senha_intro_value"
             android:inputType="textPassword"
+            android:importantForAutofill="no"
             android:padding="16dp" />
 
         <Button
@@ -112,7 +114,9 @@
         android:layout_gravity="right"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        app:srcCompat="@drawable/logo" />
+        android:contentDescription="@string/agroplus_logo_description"
+        app:srcCompat="@drawable/logo"
+        tools:ignore="RtlHardcoded" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -123,6 +127,6 @@
         android:fontFamily="@font/acme"
         android:text="@string/login_intro"
         android:textColor="@android:color/white"
-        android:textSize="40dp" />
+        android:textSize="40sp" />
 
 </FrameLayout>
