--- a/app/src/main/res/layout/apresentacao_balanco_patrimonial.xml
+++ b/app/src/main/res/layout/apresentacao_balanco_patrimonial.xml
@@ -93,6 +93,7 @@
             android:id="@+id/imageView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/agroplus_logo_description"
             app:srcCompat="@drawable/grafico_ilustrativo" />
     </LinearLayout>
 </ScrollView>
