--- a/app/src/main/res/layout/cadastro_fluxo_caixa.xml
+++ b/app/src/main/res/layout/cadastro_fluxo_caixa.xml
@@ -60,10 +60,14 @@
 
         <ToggleButton
             android:id="@+id/toggleButton"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginBottom="16dp"
-            android:text="ToggleButton" />
+            android:background="@drawable/toggle_button_shape"
+            android:textColor="@android:color/white"
+            android:textOff="@string/entrada_intro"
+            android:textOn="@string/saida_intro" />
 
         <TextView
             android:layout_width="match_parent"
