--- a/app/src/main/res/layout/fluxo_caixa_atividade.xml
+++ b/app/src/main/res/layout/fluxo_caixa_atividade.xml
@@ -98,6 +98,7 @@
             android:id="@+id/imageView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/agroplus_logo_description"
             app:srcCompat="@drawable/grafico_ilustrativo" />
     </LinearLayout>
 </ScrollView>
