--- a/app/src/main/res/layout/resultados_atividades_fazenda.xml
+++ b/app/src/main/res/layout/resultados_atividades_fazenda.xml
@@ -115,6 +115,7 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/agroplus_logo_description"
             app:srcCompat="@drawable/grafico_ilustrativo" />
     </LinearLayout>
 </ScrollView>
