--- a/app/src/main/res/layout/resultados_fazenda.xml
+++ b/app/src/main/res/layout/resultados_fazenda.xml
@@ -77,6 +77,7 @@
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/agroplus_logo_description"
             app:srcCompat="@drawable/grafico_ilustrativo2" />
     </LinearLayout>
 </ScrollView>
