--- a/app/src/main/res/layout/activity_atividades.xml
+++ b/app/src/main/res/layout/activity_atividades.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AtividadesActivity">
+    tools:context=".view.AtividadesActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
