--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
     android:orientation="vertical"
-    tools:context=".CadastroActivity">
+    tools:context=".view.CadastroActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
