--- a/app/src/main/res/layout/fragment_listagem_atividades.xml
+++ b/app/src/main/res/layout/fragment_listagem_atividades.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".view.AtividadesActivity">
+    tools:context=".view.ListagemAtividadesFragment">
 
-    <FrameLayout
-        android:id="@+id/viewPager"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2.0" />
+        android:text="@string/hello_blank_fragment" />
 
-
-</LinearLayout>
+</FrameLayout>
