--- a/app/src/main/res/layout/fragment_listagem_atividades.xml
+++ b/app/src/main/res/layout/fragment_listagem_atividades.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ListagemAtividadesFragment">
+    tools:context=".view.fragments.atividades.ListagemAtividadesFazendasFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
