--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.agrogestao.view.fragments.navigation.ApresentacaoFazendaFragment"
-        android:label="@string/menu_home"
+        android:label="@string/fazenda_intro"
         tools:layout="@layout/apresentacao_fazenda">
 
 
@@ -38,32 +38,37 @@
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.agrogestao.view.fragments.navigation.BalancoPatrimonialFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/balanco_patrimonial_intro"
         tools:layout="@layout/apresentacao_balanco_patrimonial" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.agrogestao.view.fragments.navigation.FluxoCaixaFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/fluxo_caixa_intro"
         tools:layout="@layout/fluxo_caixa_atividade" />
     <fragment
         android:id="@+id/atualizarFazendaFragment"
         android:name="com.example.agrogestao.view.fragments.navigation.AtualizarFazendaFragment"
-        android:label="AtualizarFazendaFragment" />
+        android:label="AtualizarFazendaFragment"
+        tools:layout="@layout/atualizar_fazenda" />
     <fragment
         android:id="@+id/cadastroFluxoCaixaFragment"
         android:name="com.example.agrogestao.view.fragments.navigation.CadastroFluxoCaixaFragment"
-        android:label="CadastroFluxoCaixaFragment" />
+        android:label="CadastroFluxoCaixaFragment"
+        tools:layout="@layout/cadastro_fluxo_caixa" />
     <fragment
         android:id="@+id/cadastroInventarioFragment"
         android:name="com.example.agrogestao.view.fragments.navigation.CadastroInventarioFragment"
-        android:label="CadastroInventarioFragment" />
+        android:label="CadastroInventarioFragment"
+        tools:layout="@layout/cadastro_inventario" />
     <fragment
         android:id="@+id/resultadosAtividadeFragment"
         android:name="com.example.agrogestao.view.fragments.navigation.ResultadosAtividadeFragment"
-        android:label="ResultadosAtividadeFragment" />
+        android:label="ResultadosAtividadeFragment"
+        tools:layout="@layout/resultados_atividades_fazenda" />
     <fragment
         android:id="@+id/resultadosFazendaFragment"
         android:name="com.example.agrogestao.view.fragments.navigation.ResultadosFazendaFragment"
-        android:label="ResultadosFazendaFragment" />
+        android:label="ResultadosFazendaFragment"
+        tools:layout="@layout/resultados_fazenda" />
 </navigation>
