Criando as relações de navegação

--- a/app/src/main/res/layout/apresentacao_fazenda.xml
+++ b/app/src/main/res/layout/apresentacao_fazenda.xml
@@ -40,6 +40,7 @@
                 tools:layout_editor_absoluteY="51dp" />
 
             <Button
+                android:id="@+id/indicadoresFinanceirosAtividadeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_background_blue"
@@ -74,13 +75,14 @@
             android:textSize="16sp" />
 
         <Button
+            android:id="@+id/indicadoresFinanceirosDetalhes"
             android:layout_width="250dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/round_background_blue"
             android:fontFamily="@font/acme"
-            android:layout_marginTop="16dp"
             android:padding="16dp"
             android:text="@string/detalhes_intro"
             android:textColor="@android:color/white" />
@@ -104,6 +106,7 @@
                 tools:layout_editor_absoluteY="51dp" />
 
             <Button
+                android:id="@+id/fluxoCaixaAtividade"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_background_blue"
@@ -146,6 +149,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/fluxoCaixaDetalhes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -156,6 +160,7 @@
                 tools:ignore="ButtonStyle" />
 
             <Button
+                android:id="@+id/fluxoCaixaCadastrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -213,6 +218,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/balancoPatrimonialDetalhes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -223,6 +229,7 @@
                 tools:ignore="ButtonStyle" />
 
             <Button
+                android:id="@+id/balancoPatrimonialInventario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
