--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -5,15 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_fazenda"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/fazenda_intro" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/fluxo_caixa"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/fluxo_caixa_intro" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/balanco_patrimonial_frag"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/balanco_patrimonial_intro" />
     </group>
